# auto-clicker

./: .gitignore  CMakeLists.txt  README.md  build.bat
.claude/: settings.local.json
src/: anti_detect.cpp  anti_detect.h  clicker.cpp  clicker.h  hotkey.cpp  hotkey.h  main.cpp  resource.h  resource.rc  scheduler.cpp  scheduler.h
